VTK-1253 - fixed